--- a/telegram.conf
+++ b/telegram.conf
@@ -3,7 +3,7 @@
 [bot]
 server: localhost
 chat_id: 247654201
-bot_token: 1175726128:AAE716urZOwDrxX9Lz0IXyQ0SLeYWWulTEs
+bot_token: 
 #log_path: /home/pi/klipper_logs
 
 [camera]
